deployment/smartport/postgis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgis
  namespace: smartport
  labels:
    app: postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: postgis
          image: ghcr.io/iqgeo/docker-postgis/postgis:15-3.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /opt/iqgeo/data
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pvc-postgis
---
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: smartport
  labels:
    app: postgis
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgis
